feat: adding websocket handling and streaming